fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,8 @@
   --color-darkgrey: #5d5d5d;
   --color-bluegrey: #607d8b;
 
-  --color-divider-light: rgba(255, 255, 255, 0.2);
-  --color-divider-dark: rgba(0, 0, 0, 0.1);
+  --color-white-muted: rgba(255, 255, 255, 0.2);
+  --color-black-muted: rgba(0, 0, 0, 0.1);
 
   /* Transitions */
   --transition-property: all;
@@ -95,7 +95,7 @@ button:focus {
 
 hr {
   width: calc(100% - 1.5rem);
-  border-top: 1px solid var(--color-divider-dark);
+  border-top: 1px solid var(--color-black-muted);
 }
 
 /***************************************/
@@ -187,12 +187,12 @@ hr {
     0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
-.sidebar__divider {
+.sidebar-divider {
   width: calc(100% - 16px);
-  border-top: 1px solid var(--color-divider-light);
+  border-top: 1px solid var(--color-white-muted);
 }
 
-.sidebar__header {
+.sidebar-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -207,19 +207,19 @@ hr {
   flex-shrink: 0;
   padding: 16px 8px 4px;
 }
-.sidebar__header .sidebar__logo {
+.sidebar-header .sidebar-header-logo {
   -ms-flex-negative: 0;
   flex-shrink: 0;
   margin-right: 10px;
 }
-.sidebar__header .sidebar__logo img {
+.sidebar-header .sidebar-header-logo img {
   height: var(--size-sidebar-logo);
   width: auto;
   background-color: var(--color-light);
   border: 1px solid var(--color-light);
   border-radius: 50%;
 }
-.sidebar__header .sidebar__title {
+.sidebar-header .sidebar-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -233,14 +233,14 @@ hr {
   white-space: nowrap;
 }
 
-.sidebar__content {
+.sidebar-content {
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
   flex-grow: 1;
   overflow: hidden;
 }
 
-.sidebar__footer {
+.sidebar-footer {
   -ms-flex-negative: 0;
   flex-shrink: 0;
 }
@@ -287,7 +287,7 @@ hr {
   color: var(--color-dark);
 }
 
-.topnav__row {
+.topnav-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -303,13 +303,13 @@ hr {
   height: var(--height-topbar);
 }
 
-.topnav__title {
+.topnav-title {
   font-weight: 500;
   font-size: 1rem;
   line-height: 1.5rem;
 }
 
-.topnav__profile a {
+.topnav-profile a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -322,7 +322,7 @@ hr {
   align-items: center;
 }
 
-.topnav__profile .profile-image {
+.topnav-profile .profile-image {
   height: calc(var(--height-topbar) - 20px);
   width: auto;
   margin-right: 10px;
@@ -340,6 +340,8 @@ hr {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
   overflow: hidden;
   background-color: var(--color-light);
@@ -414,14 +416,21 @@ hr {
   margin-bottom: 15px;
 }
 
-
 /***************************************/
 /*****         Page content        *****/
 /***************************************/
 .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
+  -ms-flex-negative: 0;
   flex-shrink: 0;
   min-height: calc(100vh - var(--height-topbar));
 }
@@ -430,13 +439,23 @@ hr {
 /*****          Footer             *****/
 /***************************************/
 .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -ms-flex-negative: 0;
   flex-shrink: 0;
   height: var(--height-footer);
-  border-top: 1px solid var(--color-divider-dark);
+  border-top: 1px solid var(--color-black-muted);
   margin-left: 15px;
   margin-right: 15px;
 }
@@ -453,7 +472,7 @@ hr {
   background-color: transparent;
   margin: 0 0.75rem;
   padding: 0.75rem 0rem;
-  border-bottom: 1px solid var(--color-divider-dark);
+  border-bottom: 1px solid var(--color-black-muted);
 }
 .card-header .card-title {
   margin-bottom: 0rem;
@@ -467,7 +486,7 @@ hr {
   background-color: transparent;
   margin: 0 0.75rem;
   padding: 0.5rem 0.25rem;
-  border-top: 1px solid var(--color-divider-dark);
+  border-top: 1px solid var(--color-black-muted);
 }
 
 .card-icon {
@@ -492,8 +511,14 @@ hr {
 }
 
 .card-login-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   padding: 0 3rem;
   margin-bottom: 1rem;
@@ -592,7 +617,7 @@ hr {
 /* Material form Group */
 .material-form-group {
   padding: 0rem 0.25rem;
-  border: 1px solid var(--color-divider-dark);
+  border: 1px solid var(--color-black-muted);
   border-radius: 0.25rem;
   margin-bottom: 0.75rem;
 }
@@ -673,6 +698,14 @@ hr {
   outline: none;
 }
 
+.btn-clean:focus {
+  box-shadow: none !important;
+}
+
+.btn-clean:hover {
+  background-color: var(--color-black-muted);
+}
+
 .btn-icon {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -724,7 +757,7 @@ hr {
   background-color: #000;
 }
 
-.sidebar__content .simplebar-scrollbar::before {
+.sidebar-content .simplebar-scrollbar::before {
   background-color: #fff;
 }
 
@@ -959,6 +992,7 @@ hr {
   -webkit-animation-timing-function: linear;
   animation-timing-function: linear;
   background: darkgray;
+  background: -o-linear-gradient(left, #eeeeee 10%, #dddddd 30%, #eeeeee 60%);
   background: -webkit-gradient(
     linear,
     left top,
@@ -967,7 +1001,6 @@ hr {
     color-stop(30%, #dddddd),
     color-stop(60%, #eeeeee)
   );
-  background: -o-linear-gradient(left, #eeeeee 10%, #dddddd 30%, #eeeeee 60%);
   background: linear-gradient(to right, #eeeeee 10%, #dddddd 30%, #eeeeee 60%);
   background-size: 200% 100%;
   height: 100%;
